Invalid value set to CANDIDATEFORM structure

XMLWordPrintable

      According to the Windows API reference[1], dwStyle of CANDIDATEFORM structure should be set to CFS_CANDIDATEPOS or CFS_EXCLUDE. So, CFS_POINT is wrong here.
        
      See line 3914 in src\java.desktop\windows\native\libawt\windows\awt_Component.cpp [2], AwtComponent::SetCandidateWindow function:
              CANDIDATEFORM cf;
              cf.dwStyle = CFS_POINT;
              ImmGetCandidateWindow(hIMC, 0, &cf);

      [1] https://docs.microsoft.com/en-us/windows/win32/api/imm/ns-imm-candidateform
      [2] https://github.com/openjdk/jdk/blob/f90425a1cbbc686045c87086af586e62f05f6c49/src/java.desktop/windows/native/libawt/windows/awt_Component.cpp#L3914

            Assignee:
            Alexey Ivanov
            Reporter:
            Shadow Bug
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: