8278472: Invalid value set to CANDIDATEFORM structure